fixed blog on mobile view

--- a/src/components/css/blog.css
+++ b/src/components/css/blog.css
@@ -106,7 +106,7 @@
     
     .blog__container{
 
-        padding: 0 2em;
+        padding: 0;
         width: 100%;
 
     }
